@@ -1,0 +1,21 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
+
+<!--
+    TODO define vocabulary identification data
+    PUBLIC ID  : -//vendor//vocabulary//EN
+    SYSTEM ID  : http://server/path/__NAME__
+-->
+
+<!-- TODO define your own vocabulary/syntax. Example follows:  -->
+<!ELEMENT ok (agent,player,price,balance)>
+
+<!ELEMENT agent (#PCDATA)>
+<!ELEMENT player (#PCDATA)>
+<!ELEMENT price (#PCDATA)>
+<!ELEMENT balance (#PCDATA)>
+
