@@ -1,0 +1,27 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
+
+<!--
+    TODO define vocabulary identification data
+    PUBLIC ID  : -//vendor//vocabulary//EN
+    SYSTEM ID  : http://server/path/__NAME__
+-->
+
+<!-- TODO define your own vocabulary/syntax. Example follows:  -->
+<!ELEMENT cardpack (certificate*)>
+<!ELEMENT certificate (token, piece, broker, player, datetime)>
+<!ATTLIST cardpack
+    agent CDATA #REQUIRED
+    player CDATA #REQUIRED
+    price CDATA #REQUIRED
+    balance CDATA #REQUIRED
+>
+<!ELEMENT token (#PCDATA)>
+<!ELEMENT piece (#PCDATA)>
+<!ELEMENT broker (#PCDATA)>
+<!ELEMENT player (#PCDATA)>
+<!ELEMENT datetime (#PCDATA)>
