@@ -1,0 +1,24 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
+
+<!--
+    TODO define vocabulary identification data
+    PUBLIC ID  : -//vendor//vocabulary//EN
+    SYSTEM ID  : http://server/path/__NAME__
+-->
+
+<!-- TODO define your own vocabulary/syntax. Example follows:  -->
+<!ELEMENT bcc (round,state,countdown*,current*,duration*,upcoming*,alarm*,now*)>
+
+<!ELEMENT round (#PCDATA)>
+<!ELEMENT state (#PCDATA)>
+<!ELEMENT countdown (#PCDATA)>
+<!ELEMENT current (#PCDATA)>
+<!ELEMENT duration (#PCDATA)>
+<!ELEMENT upcoming (#PCDATA)>
+<!ELEMENT alarm (#PCDATA)>
+<!ELEMENT now (#PCDATA)>
