@@ -1,3 +1,4 @@
 Newest changes at top:
 
+14 April 2016 09:30PM: Added Dtd and database.sql. Removed un-used files from asgn 1
 14 April 2016 12:10PM: Added registerView and altered config file, created repo based  on asgn1 
